--- a/mobile-app/bank-app/testFinal/app/src/main/res/values/strings.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="usuario">Usuario</string>
     <string name="password">password</string>
     <string name="ingresar">Ingresar</string>
+    <string name="button">Button</string>
+    <string name="username">username</string>
 </resources>
