--- a/mobile-app/bank-app/testFinal/app/src/main/res/values/strings.xml
+++ b/mobile-app/bank-app/testFinal/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="ingresar">Ingresar</string>
     <string name="button">Button</string>
     <string name="username">username</string>
+    <string name="user">User</string>
 </resources>
